cs-tm3: add mobile-repair screenshot image with width 100% to index.html, wrapped to .cs-tml-main-container

--- a/css/main.css
+++ b/css/main.css
@@ -26,3 +26,7 @@ body {
 }
 
 /*tml styles*/
+
+#_cs-tm3-image-repair {
+    max-width: 100%
+}
